# DRAMsim3

./: README.md  README_REAL_APP_MODE.md
configs/: DDR4_8Gb_x16_3200_8ch.ini  real_app_mode.ini
pnm_sim/: CMakeLists.txt
pnm_sim/src/: address_decoder.cc  address_decoder.h  channel_state.cc  common.cc  common.h  configuration.cc  configuration.h  controller.cc  controller.h  cxl.cc  cxl.h  dram_system.cc  dram_system.h  hmc.cc  hmc.h  main.cc  memory_system.cc  memory_system.h  pnm.cc  pnm.h  pnm_testbench.cc  simple_stats.cc  simple_stats.h  thermal.cc
scripts/: parse_configs_for_trace_gen.py  run_pnm_sim.sh  run_pnm_sim_8ch.sh  run_pnm_sim_blocksparse.sh  run_pnm_sim_delta_act.sh  run_pnm_sim_diffprune.sh  run_pnm_sim_gdb.sh  run_trace_gen.sh  run_trace_gen_8ch.sh  run_trace_gen_blocksparse.sh  run_trace_gen_delta_act.sh  run_trace_gen_diffprune.sh  run_trace_gen_gdb.sh
scripts_real_app_mode/: run_pnm_sim_real_app_mode.sh  run_qemu.sh  ssh_qemu.sh  trace_conv.py  vnc_qemu.sh
trace_gen/: Sconstruct  common.h  config.cpp  config.h  instruction.cpp  instruction.h  main.cpp  test_base.trc  test_cxlpnm.trc  trace_gen
transformers_doc/en/pytorch/: image_classification.ipynb
